Bug 105404 - Draw very slow dividing vector graphic (only Linux problem)
Summary: Draw very slow dividing vector graphic (only Linux problem)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: perf
Depends on:
Blocks: EMF-WMF Performance
  Show dependency treegraph
 
Reported: 2017-01-18 08:35 UTC by Lucio Marinelli
Modified: 2023-05-08 12:08 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (28.17 KB, application/vnd.oasis.opendocument.graphics)
2017-01-18 15:52 UTC, Lucio Marinelli
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lucio Marinelli 2017-01-18 08:35:50 UTC
Description:
I import a WMF vector graphic than divide a plot in single points; it keeps working for more than 15 minutes and had to kill the program.

Steps to Reproduce:
1. Open WMF graphic
2. select the graphic and perform "divide" command until reaching a plot
3. dividing the plot in sigle dots takes a huge amount of time and require killing the program

Actual Results:  
Very slow process

Expected Results:
The process should take a few seconds


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0
Comment 1 Xisco Faulí 2017-01-18 13:39:18 UTC
Hello Lucio,

Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. 
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)
Comment 2 Lucio Marinelli 2017-01-18 15:52:46 UTC
Created attachment 130531 [details]
Sample file
Comment 3 Buovjaga 2017-01-24 11:10:19 UTC
(In reply to Lucio Marinelli from comment #2)
> Created attachment 130531 [details]
> Sample file

I selected the topmost plot and right-click - Break. I took maybe under 1 minute. This is on a 2012 laptop.
Lucio: how performant is your computer?

Win 7 Pro 64-bit Version: 5.4.0.0.alpha0+
Build ID: 1c27286b9d5331634c073cd3e327bd941e61bbb6
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-01-23_03:24:17
Locale: fi-FI (fi_FI); Calc: group
Comment 4 Lucio Marinelli 2017-01-24 21:32:52 UTC
I first tried on a Core 2 duo, now just tried again on an Intel Core i3 always under Ubuntu Mate 64bit. Breaking the first plot took 6 minutes (100% workload for 1 out of 4 CPUs), then I tried to move the plot and it started again 100% CPU and causing the mouse to stop working until I had to kill the process.
Buovjaga, I see you're using Windows; maybe this is a Linux-only issue...
Comment 5 Buovjaga 2017-01-25 06:40:11 UTC
(In reply to Lucio Marinelli from comment #4)
> I first tried on a Core 2 duo, now just tried again on an Intel Core i3
> always under Ubuntu Mate 64bit. Breaking the first plot took 6 minutes (100%
> workload for 1 out of 4 CPUs), then I tried to move the plot and it started
> again 100% CPU and causing the mouse to stop working until I had to kill the
> process.
> Buovjaga, I see you're using Windows; maybe this is a Linux-only issue...

I don't know, those CPUs sound slower than my 2012 laptop, which has i7 of its generation.
Comment 6 Xisco Faulí 2017-11-01 23:21:34 UTC
I do confirm in

Version: 6.0.0.0.alpha1+
Build ID: e90329ff3896cf33528b47830f49fcd05590bd6a
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

if I select the whole chart by dragging the mouse and Shape - break from the content menu

Same behaviour in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 7 QA Administrators 2018-11-02 03:50:44 UTC Comment hidden (obsolete)
Comment 8 Roman Kuznetsov 2018-11-02 08:55:27 UTC
don't repro in

Version: 6.2.0.0.alpha0+
Build ID: cec31fdedd7c94f4ebf903a66456a75867db22b0
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-10-21_22:54:44
Locale: ru-RU (ru_RU); Calc: threaded

I take 1,5 min for break of all graphic

I have Intel Core i3-3120M (notebook) 4Gb of memory and Windows 7
Comment 9 Regina Henschel 2018-11-02 12:25:54 UTC
I cannot reproduce it with Version: 6.2.0.0.alpha1+ (x64)
Build ID: e33424dd887cb1a11a3dba2513ef0f4bf93a6dbe
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-01_00:43:29
Locale: de-DE (en_US); Calc: CL

Each line has about 20000 points. The handling of so many points is not a matter of the speed of the processor but of the size of the memory. If the memory is 4 GB or less, it sometimes helps to close all other applications, especially browsers. I've got 16GB RAM and breaking all graphic is done in 16 seconds. There have been some improvements in handling huge amount points in charts, but I do not find the issue, might have been in earlier AOO.
Comment 10 Buovjaga 2018-11-02 13:57:36 UTC
It does hammer the CPU on Linux (breaking the topmost plot). I have 32GB of memory. I killed it after 2 minutes.

Please everyone test on Linux.

Arch Linux 64-bit
Version: 6.2.0.0.alpha1+
Build ID: 45d8fb0ba77396b7d5e02c2fc9a8ae5b233a02bc
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on 31 October 2018
Comment 11 Lucio Marinelli 2018-11-03 05:52:42 UTC
I confirm the problem is still present in Libreoffice Draw 6.0.6.2 running in Ubuntu Mate 18.04.1 on a Dell XPS 13 with 7.5Gb of RAM and a Intel Core I7-8550U CPU (1.8GHzx8): one of the 8 cores keeps working for more than 2 minutes, than I killed the process.
Comment 12 QA Administrators 2019-11-04 03:28:46 UTC Comment hidden (obsolete)
Comment 13 Lucio Marinelli 2019-11-09 14:10:40 UTC
The problem is still present in LibreOffice 6.0.7.3 running under Ubuntu 18.04 on a Dell XPS-13-9370. One out of the 8 CPU cores keeps working at 100% for many minutes and afterwards Draws becomes very slow and unusable anyway (I had to kill the process).

Maybe this is due to the large number of points (19995) to be divided?
Are you sure this is a Linux-only issue? If the problem is the large number of points the issue should be present also on other OS.
Comment 14 QA Administrators 2021-11-09 04:37:53 UTC Comment hidden (obsolete)
Comment 15 Lucio Marinelli 2021-11-10 14:31:51 UTC
I confirm the problem is still present in LibreOffice version 7.2.2.2 running in Debian testing.
Comment 16 Commit Notification 2023-05-04 11:57:47 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b7db802731826b6cc3b55100470b0c61c1f2dfa

tdf#105404 [API CHANGE] add index to accessiblity change event

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2023-05-04 11:57:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d548d283f0ce369fa03d6f2c1ddf0f8e988bc65a

tdf#105404 lock model while updating

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 BogdanB 2023-05-05 05:04:46 UTC
Very fast now with
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5e7327e9313e2d9fe2f0defb30d3e7dc28c0b2ce
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Bad in
Version: 7.5.2.1 (X86_64) / LibreOffice Community
Build ID: e8bf3b441b8370f8440b0339fd9490765a8d57ca
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded