tdf#105404 lock model while updating

to reduce broadcasting while we are doing a "break" operation on a
vector shape, shaves 50% off the time here

Change-Id: Ied77c81c892727b69481c23ea7c5eff0e7eeb830
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151353
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>